# Trajectoryhomework

./: README.md
Trajectoryhomework/devel/: .catkin  local_setup.sh
Trajectoryhomework/devel/lib/astar_path_planner/: Trajectory
Trajectoryhomework/devel/lib/pkgconfig/: astar_path_planner.pc
Trajectoryhomework/devel/share/astar_path_planner/cmake/: astar_path_plannerConfig.cmake
astar_path_planner/: CMakeLists.txt  package.xml
astar_path_planner/launch/: astar_planner.launch
astar_path_planner/rviz/: astar_path_planner.rviz
astar_path_planner/src/: Trajectory.cpp  astar_planner.cpp
devel/: .rosinstall  _setup_util.py
devel/lib/astar_path_planner/: astar_planner
